--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -23,3 +23,14 @@
     color: inherit;
     text-decoration: none;
   }
+
+  ::-webkit-scrollbar-track {
+    background-color: #0a4094;
+}
+::-webkit-scrollbar {
+    width: 6px;
+    background: #0a4094;
+}
+::-webkit-scrollbar-thumb {
+    background: #042760;
+}
